# frame-check

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  ANCHOR_AUTHORSHIP_METHODOLOGY_v1.md  ANTICIPATED_CRITIQUES.md  CALIBRATION_SET.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_CURATOR_OUTREACH_v1.md  DETECTOR_V2_PROMOTION.md  ENGINE_TIER_RECOMMENDATIONS_v1.md  ENGINE_TIER_STRATEGY_v1.md  FRAME_DIVERGENCE_CONTRACT_v1.md  FRAME_DIVERGENCE_v1.md  FRAME_DIVERGENCE_v2.md  FRAME_DIVERGENCE_v2_SUMMARY.md  FRAMING_ANALYSIS.md  GOVERNANCE.md  LICENSE  MCP_CONTRACT_V2_PROPOSAL.md  MCP_INTEGRATOR_OUTREACH_v1.md  MCP_PACKAGE_DESIGN_v1.md  MCP_SERVER.md  MCP_TYPESCRIPT_SCOPE.md  METHODOLOGY_PAPER_OUTLINE_v1.md  METHODOLOGY_PAPER_OUTLINE_v2.md  METHODOLOGY_V2_CANDIDATES_v1.md  NOTICE  RATERS.md  README.md  RELEASING.md  REVIEWER_OUTREACH_TEMPLATES.md  ROADMAP.md  SECURITY.md  TRACK_B_INFORMAL_STUDY_v1.md  V3_EVIDENCE_FOR_PROMOTION.md  V4_CONFIDENCE_INVERSION_IMPACT_v1.md  (+66 more)
.github/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  frame_proposal.md
.github/workflows/: canon-audit.yml  codeql.yml  dco-check.yml  publish.yml  tests.yml
calibration/: CORPUS_EXPANSION_SURVEY_v1.md  README.md  source_network_corpus.yaml
data/: feature_limit_compare.json  process_lock.json
data/frame_library/: FVS-001_frame_amplification.md  FVS-002_fluency_quality_illusion.md  FVS-003_prompt_attribution_error.md  FVS-004_default_geometry.md  FVS-005_system_attribution_error.md  FVS-006_identity_framing_asymmetry.md  FVS-007_failure_framing.md  FVS-008_growth_frame.md  FVS-009_risk_frame.md  FVS-010_completeness_illusion.md  FVS-011_stakeholder_frame.md  FVS-012_uncertainty_frame.md  FVS-013_oracle_frame.md  FVS-014_temporal_anchoring.md  FVS-015_efficiency_frame.md  FVS-016_authority_by_citation.md  FVS-017_false_balance.md  FVS-018_scope_narrowing.md  FVS-019_narrative_coherence.md  FVS-020_invisible_frame.md  INDEX.md  README.md
data/frame_library_v3/: FVS-001_frame_amplification.md  FVS-002_fluency_quality_illusion.md  FVS-003_prompt_attribution_error.md  FVS-004_default_geometry.md  FVS-005_system_attribution_error.md  FVS-006_identity_framing_asymmetry.md  FVS-007_failure_framing.md  FVS-008_growth_frame.md  FVS-009_risk_frame.md  FVS-010_completeness_illusion.md  FVS-011_stakeholder_frame.md  FVS-012_uncertainty_frame.md  FVS-013_oracle_frame.md  FVS-015_efficiency_frame.md  FVS-016_authority_by_citation.md  FVS-017_false_balance.md  FVS-018_scope_narrowing.md  FVS-019_narrative_coherence.md  FVS-020_invisible_frame.md  INDEX.md  README.md
data/transmissions/: README.md  attribution-error.md  catching-your-own-overclaim.md  constraint-paradox.md  fabrication-architecture.md  first-read.md  system-layer.md
data/worked_examples/: README.md  ai-on-life-decisions-startup-2026.md  divergence-on-claude-bitcoin-retirement-2026.md  fomc-statement-march-2026.md  four-llms-on-bitcoin-retirement-2026.md  grok-on-nvidia-earnings-2026.md  the-intelligence-age-altman-2024.md
docs/: ANTICIPATED_CRITIQUES.md  CHANGELOG.md  COOKBOOK.md  FRAME_DIVERGENCE_CONTRACT_v1.md  MCP_SERVER.md  METHODOLOGY.md  RATERS.md  README.md  RELEASING.md  ROADMAP.md  VALIDATION_PROGRAM.md
framecheck_mcp/: FRAME_DIVERGENCE_CONTRACT_v1.md  MCP_SERVER.md  __init__.py  source_network.py
framecheck_mcp/calibration/: README.md  source_network_corpus.yaml
framecheck_mcp/data/: cost_budget.json  feature_limit_web_verify.json
schemas/: attribution-1.0.0.json
scripts/: audit_panel_rationale_patterns.py  audit_substrate_parallel.py  audit_tp_rationale_patterns.py  bench_mcp.py  canon_audit.sh  canon_audit_known_leaks.txt  canon_audit_pystring_concat_known_leaks.py  check_no_em_dashes.py  check_per_module_coverage.py  check_wheel_imports.py  claim_a_analysis.py  claim_a_runner.py  cut_release.py  deploy_check.sh  detector_empirics.py  diagnose_fvs_007_001_mis_fires.py  extract_fvs_007_001_rationales.py  extract_transmissions.py  falsification_status.py  install-git-hooks.sh  lift_dry_run.py  mcp_conformance_driver.py  mcp_quality_driver.py  mirror_review.py  normalize_library_refs.py  probe_v4_2_model.py  reframe_full_sweep_baseline.json  reframe_representative_docs.json  reframe_smoke_test.py
scripts/_release_lib/: __init__.py  canon_replacements.txt  close_out.py  lift.py  lock.py  log.py  state.py
src/: claim_analysis.py  clarethium_measure.py  comparison.py  decision_readiness.py  frame_deepening.py  frame_library.py  frame_library_index.py  frame_opportunities.py  frame_patterns.py  framing.py  genre_classifier.py  llm_cost.py  manifest.py  mcp_compose.py  mcp_log.py  mcp_resources.py  mcp_schema.py  mcp_server.py  source_network.py  user_goals.py  version.py
src/framecheck_mcp/: FRAME_DIVERGENCE_CONTRACT_v1.md  MCP_SERVER.md  source_network.py
tests/: test_clarethium_measure_top_level.py  test_comparison.py  test_cookbook_recipes.py  test_decision_readiness.py  test_detector_empirics.py  test_documented_boundaries.py  test_entity_classifier.py  test_frame_library.py  test_frame_library_index.py  test_framing_synthesis.py  test_framing_validation.py  test_grounding.py  test_llm_client.py  test_llm_cost.py  test_mcp_adversarial.py  test_mcp_security_phase5.py  test_mcp_server.py  test_mcp_server_cli.py  test_mcp_server_no_outbound_http.py  test_numerical_extraction.py  test_public_extract_inventory.py  test_regression_bitcoin_gold_2026_04_30.py  test_routing_by_entity_type.py  test_routing_by_time_context.py  test_source_network_health.py  test_source_network_validation.py  test_time_context.py  test_version_coherence.py  test_worked_example_fixtures.py  test_world_bank_routing.py
validation/: README.md  external_doc_sourcer.py
validation/baseline_comparison/: PROTOCOL_v1.md  STATUS.md  analyze_h3.py  corpus_v1.json  h3_corpus.json  rating_rubric_v1.md  run_baseline.py
validation/decision_readiness/: CORPUS_GENRE_GAPS.md  README.md  (+8 more)
(+391 files in other folders)
