[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-check-mcp"
version = "0.8.9"
description = "Frame Check MCP server: deterministic structural framing analysis for AI-generated documents, with default-on frame-divergence block per FRAME_DIVERGENCE_CONTRACT_v1 c1.0. MCP surface delegates V4.2 judgment to the caller's agent model; zero Frame Check LLM cost per query."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Lovro Lucic", email = "lovro.lucic@gmail.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "framing",
    "text-analysis",
    "agents",
    "claude-desktop",
    "cursor",
    "frame-divergence",
    "decision-readiness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Clarethium/frame-check-mcp"
Repository = "https://github.com/Clarethium/frame-check-mcp"
Issues = "https://github.com/Clarethium/frame-check-mcp/issues"
Changelog = "https://github.com/Clarethium/frame-check-mcp/blob/master/CHANGELOG.md"
Security = "https://github.com/Clarethium/frame-check-mcp/blob/master/SECURITY.md"
Methodology = "https://github.com/Clarethium/frame-check-mcp/blob/master/METHODOLOGY.md"
"Frame Library" = "https://github.com/Clarethium/frame-check-mcp/tree/master/data/frame_library"

[project.scripts]
frame-check-mcp = "mcp_server:cli"

[tool.setuptools]
# Modules reachable from mcp_server.py via local-import graph;
# bundling them is required for `import mcp_server` to resolve
# in a clean environment.
py-modules = [
    "mcp_server",
    "mcp_log",
    "mcp_resources",
    "mcp_schema",
    "mcp_compose",
    "framing",
    "clarethium_measure",
    "claim_analysis",
    "frame_library",
    "frame_library_index",
    "decision_readiness",
    "comparison",
    "source_network",
    "llm_cost",
    "llm_client",
    "prompt_safety",
    "version",
    "entity_classifier",
    "time_context",
    "corpus_intelligence",
    "frame_deepening",
    "frame_opportunities",
    "frame_patterns",
    "genre_classifier",
    "user_goals",
    "manifest",
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["framecheck_mcp*"]

[tool.setuptools.package-data]
framecheck_mcp = [
    "data/frame_library/**/*",
    "data/frame_library_v3/**/*",
    "data/worked_examples/**/*",
    "data/transmissions/**/*",
    "METHODOLOGY.md",
    "MCP_SERVER.md",
    "FRAME_DIVERGENCE_v1.md",
    "FRAME_DIVERGENCE_CONTRACT_v1.md",
    "V4_2_GAP_INVENTORY_v1.md",
    "calibration/results/**/*",
    "validation/decision_readiness/results/**/*",
    "validation/decision_readiness/corpus/**/*",
    "pipeline_version.txt",
]

[tool.pytest.ini_options]
# Replaces the legacy pytest.ini; PEP 518 location keeps all build /
# test config in pyproject.toml. The two registered settings:
#
#   markers: documents the @pytest.mark.timeout custom marker so
#     pytest does not emit PytestUnknownMarkWarning. The marker is
#     a no-op unless pytest-timeout is installed; the registration
#     prevents the warning regardless.
#
#   filterwarnings = default: keep the standard filter permissive so
#     test suites that surface real construct-honesty signals (e.g.
#     clarethium_measure UserWarning on non-markdown inputs) stay
#     visible. Suppressing warnings would hide real measurement gaps.
markers = [
    "timeout: soft timeout hint (enforced only when pytest-timeout plugin is installed)",
    "visual: browser-rendered visual regression tests (require playwright + chromium)",
]
filterwarnings = [
    "default",
]
