[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-check-mcp"
version = "0.9.4"
description = "Frame Check MCP server: deterministic structural framing analysis for AI-generated documents, with default-on frame-divergence block per FRAME_DIVERGENCE_CONTRACT_v1 c1.0. MCP surface delegates V4.2 judgment to the caller's agent model; zero Frame Check LLM cost per query."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "Lovro Lucic", email = "lovro.lucic@gmail.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "framing",
    "text-analysis",
    "agents",
    "claude-desktop",
    "cursor",
    "frame-divergence",
    "decision-readiness",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://blog.clarethium.com/frame-check"
Repository = "https://github.com/Clarethium/frame-check"
Issues = "https://github.com/Clarethium/frame-check/issues"
Changelog = "https://github.com/Clarethium/frame-check/blob/master/CHANGELOG.md"
Security = "https://github.com/Clarethium/frame-check/blob/master/SECURITY.md"
Methodology = "https://frame.clarethium.com/corpus/methodology/"
"Frame Library" = "https://frame.clarethium.com/corpus/library/"

[project.scripts]
frame-check-mcp = "mcp_server:cli"

[tool.setuptools]
# Modules reachable from mcp_server.py via local-import graph;
# bundling them is required for `import mcp_server` to resolve
# in a clean environment.
py-modules = [
    "mcp_server",
    "mcp_log",
    "mcp_resources",
    "mcp_schema",
    "mcp_compose",
    "framing",
    "clarethium_measure",
    "claim_analysis",
    "frame_library",
    "frame_library_index",
    "decision_readiness",
    "comparison",
    "source_network",
    "llm_cost",
    "llm_client",
    "prompt_safety",
    "version",
    "entity_classifier",
    "entity_data",
    "time_context",
    "corpus_intelligence",
    "frame_deepening",
    "frame_opportunities",
    "frame_patterns",
    "genre_classifier",
    "user_goals",
    "manifest",
]
include-package-data = true

[tool.setuptools.packages.find]
include = ["framecheck_mcp*"]

[tool.setuptools.package-data]
framecheck_mcp = [
    "data/frame_library/**/*",
    "data/worked_examples/**/*",
    "data/transmissions/**/*",
    "MCP_SERVER.md",
    "FRAME_DIVERGENCE_CONTRACT_v1.md",
    "calibration/results/**/*",
    "validation/decision_readiness/results/**/*",
    "validation/decision_readiness/corpus/**/*",
    "pipeline_version.txt",
]

[tool.pytest.ini_options]
# Replaces the legacy pytest.ini; PEP 518 location keeps all build /
# test config in pyproject.toml. The two registered settings:
#
#   markers: documents the @pytest.mark.timeout custom marker so
#     pytest does not emit PytestUnknownMarkWarning. The marker is
#     a no-op unless pytest-timeout is installed; the registration
#     prevents the warning regardless.
#
#   filterwarnings = default: keep the standard filter permissive so
#     test suites that surface real construct-honesty signals (e.g.
#     clarethium_measure UserWarning on non-markdown inputs) stay
#     visible. Suppressing warnings would hide real measurement gaps.
markers = [
    "timeout: soft timeout hint (enforced only when pytest-timeout plugin is installed)",
    "visual: browser-rendered visual regression tests (require playwright + chromium)",
]
filterwarnings = [
    "default",
]

[tool.mypy]
# Type-check configuration. The current discipline is incremental:
# the codebase has organic type coverage and is moving toward
# ``--strict`` over time. Settings here pin a baseline that catches
# real bugs (untyped dict access typos, name redefinitions,
# incompatible overrides) without blocking on the larger annotation
# debt that ``strict`` would surface.
#
# Goal at v1.0: this section's ``strict = true`` flips on for
# ``mcp_server``, ``mcp_compose``, ``mcp_resources``, ``mcp_schema``,
# ``framing``, ``comparison``, ``clarethium_measure`` (the public
# wheel surface). Modules under ``tests/`` and adapter scripts can
# stay at the relaxed default.
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
# Exclude the wheel-build duplicate of source_network.py: it is a
# placeholder for the future src-layout refactor; mypy would
# complain about the duplicated module name.
exclude = [
    "framecheck_mcp/source_network\\.py",
    "build/",
]

# Per-module overrides. The script-style validation harnesses under
# ``calibration/`` and ``validation/`` are ad-hoc analysis code, not
# library API; relax checks there.
[[tool.mypy.overrides]]
module = [
    "calibration.*",
    "validation.*",
]
ignore_errors = true

[tool.ruff]
# Project ruff configuration. The defaults are mostly fine; this
# section pins the explicit settings the existing audit and CI
# baseline depend on.
line-length = 100
target-version = "py310"
extend-exclude = [
    "framecheck_mcp/source_network.py",  # build-staging duplicate
    "build/",
]

[tool.ruff.lint]
# Select rule families that are stable and high-signal for this
# codebase. Detailed selection (rather than ``select = ["ALL"]``) to
# avoid noise from style-opinion rules that don't match the existing
# codebase voice. Each family expands as the codebase moves toward
# v1.0:
#   E, F   -- pycodestyle errors + pyflakes (real-bug class)
#   B      -- flake8-bugbear (real-bug-prone patterns; B023 / B904
#             commonly fire on legitimate scoping / re-raise idioms
#             so the per-rule ignores below pin them off)
#   ISC    -- implicit-string-concatenation (cleaned up at v0.9.4)
# Future additions to weigh: SIM (idiomatic-Python), UP (pyupgrade),
# RET (return-style), RUF (ruff-specific). Each adds ~50-100 fixable
# rewrites and ~10 design questions; introduce one at a time after
# the codebase voice is settled.
select = [
    "E", "F",
    "B",
    "ISC",
]
ignore = [
    # Long lines: the regex tables in source_network / clarethium_measure
    # and the prompt strings in mcp_compose are intentionally one-line
    # and re-flowing them would split atomic strings across multiple
    # adjacent literals (the very pattern ISC catches).
    "E501",
    # Ambiguous variable names (l, I, O); the existing test suite
    # uses single-letter loop vars in a few places. Not load-bearing.
    "E741",
    # B023 (function-uses-loop-variable) fires on legitimate pattern
    # binding closures inside the regex / pattern-table builders;
    # both sites are intentional.
    "B023",
    # B904 (raise-without-from-inside-except) fires on a couple of
    # error-translation sites where the original exception is
    # intentionally elided to keep the public message shape clean.
    "B904",
    # B905 (zip-without-explicit-strict) — zip semantics here are
    # always equal-length by construction.
    "B905",
]
